2000-04-10  Paul Eggert

	* doc/grep.1, doc/grep.texi, NEWS: -C now requires an operand.
	* src/grep.c (short_options, long_options, main, usage): Likewise.
	(context_length_arg): Renamed from ck_atoi.  Now reports an error
	and exits if the number is out of range for a context length.
	(get_nondigit_option): New function, which checks for overflow
	correctly, and which does not parse nonadjacent strings of digits
	into a single number.
	(main): Use get_nondigit_option instead of doing the code inline.
	With -A, -B, and -C, optarg is now guaranteed to be nonzero.

2000-04-08  Paul Eggert

	Now that we know that the input is always terminated by a
	newline before the matching algorithms see it, clean up the
	matching algorithms so that they no longer need to modify the
	input by inserting a sentinel newline, and no longer worry
	about running off the end of the buffer due to a missing sentinel.
	
	* src/grep.c (nlscan, prpending, prtext, grepbuf): Do not
	worry about running off the end of the input buffer, since
	it's now guaranteed to end in the sentinel newline.
	* src/search.c (EGexecute, Pexecute): Likewise.

	* src/dfa.c (prtok, dfasyntax, dfaparse, copy, merge, state_index,
	epsclosure, dfaexec, dfacomp):
	Change many instances of "T *" to "T const *", to catch
	any inadvertent programming errors made during this conversion.
	* src/dfa.h (dfacomp, dfaexec, dfaparse): Likewise.
	* src/grep.c (struct stats.parent, long_options, grepdir,
	compile, execute, fillbuf, lastnl, lastout, nlscan, prline,
	prpending, prtext, grepbuf, grep, grepfile, grepdir): Likewise.
	* src/grep.h (struct matcher.compile, struct matcher.execute):
	Likewise.
	* src/kwset.c (struct kwset.trans, kwsalloc, kwsincr, treefails,
	treedelta, hasevery, treenext, bmexec, cwexec, kwsexec): Likewise.
	* src/kwset.h (kwsalloc, kwsincr, kwsexec): Likewise.
	* src/search.c (kwsmusts, Gcompile, Ecompile, EGexecute, Pcompile,
	Pexecute): Likewise.

	* src/dfa.c (dfaexec):