@@ -2,6 +2,11 @@
 
 #ifndef HAVE_GETPAGESIZE
 
+#ifdef __BEOS__
+# include <OS.h>
+# define getpagesize() B_PAGE_SIZE
+#endif
+
 #ifdef HAVE_UNISTD_H
 # include <unistd.h>
 #endif
