@@ -1,3 +1,8 @@
+2000-04-17  Bruno Haible
+
+	* src/system.h [BeOS]: Ignore O_BINARY.
+	* src/getpagesize.h [BeOS]: Define getpagesize() as B_PAGE_SIZE.
+
 2000-04-10  Paul Eggert
 
 	* doc/grep.1, doc/grep.texi, NEWS: -C now requires an operand.
